# Q4_25_Builder_Devansh

./: README.md
Capstone/zord_turbin3/: package-lock.json  readme.md
Capstone/zord_turbin3/arcium_module/rust/encrypted-ixs/: Cargo.toml
Capstone/zord_turbin3/arcium_module/rust/encrypted-ixs/src/: lib.rs
Capstone/zord_turbin3/zord/: Anchor.toml  Cargo.toml  package.json  tsconfig.json
Capstone/zord_turbin3/zord/programs/zord/: Cargo.toml
Capstone/zord_turbin3/zord/programs/zord/src/: errors.rs  events.rs  lib.rs  vk.rs
Capstone/zord_turbin3/zord/programs/zord/src/instructions/: events.rs  initialize_kyc.rs  mod.rs  submit_attestation.rs  verify_zk.rs
Capstone/zord_turbin3/zord/programs/zord/src/state/: kyc_account.rs  mod.rs
Capstone/zord_turbin3/zord/programs/zord/src/zk/: verification_key.json  verification_key.rs
Week _0(prereq)/airdrop/: .gitignore  TS Client Logic.md  airdrop.ts  transfer.ts
Week _0(prereq)/airdrop/programs/: Turbin3_prereq.json
Week _0(prereq)/airdrop2/: readme.md
Week _0(prereq)/airdrop2/src/: lib.rs
Week_2/anchor_vault_q4_25/: Anchor.toml
Week_2/anchor_vault_q4_25/runbooks/: README.md
Week_2/anchor_vault_q4_25/tests/: anchor_vault_q4_25.ts
Week_2/escrow/tests/: anchor-escrow-q4-25.ts
Week_3/anchor-mplxcore-starter-q4-25/: Anchor.toml
Week_3/anchor-mplxcore-starter-q4-25/tests/: anchor-mplxcore-starter-q4-25.ts
Week_3/anchor_amm_q4/: package-lock.json
Week_4/anchor-nft-staking-starter-q4-25/: Anchor.toml
Week_4/anchor-nft-staking-starter-q4-25/tests/: anchor-nft-staking-starter-q4-25.ts
airdrop/: enroll.ts  keygen.ts  tests.ts
airdrop/scripts/: generate-client.ts
airdrop2/: .gitignore  Cargo.toml
anchor_amm_q4/programs/anchor_amm_q4/: Cargo.toml
anchor_amm_q4/tests/: anchor_amm_q4.ts
anchor_escow_q4/: Cargo.toml
anchor_escow_q4/src/: lib.rs
anchor_escow_q4/src/instructions/: make.rs
anchor_vault_q4_25/: txtx.yml
(+57 files in other folders)
